Arreglo de variados desperfectos visuales y adision de navegacion
-Se solucionaron los problemas visuales de los botones en gestion y la estructura de las imagenes y scroll en clase explicacion.
-se agregaron imagenes de habilidades en color azul.
-se altero moderadamente el codigo de los botones de gestion pero siguen cumpliendo con su funcion con el objetivo de mejorarlos visualmente.

--- a/Vistas/clase.html
+++ b/Vistas/clase.html
@@ -73,7 +73,7 @@
                     </div>
                     <hr class="toolBar_espaciado" width="3" size="40%">
                     <div class="toolBar_item" id="out">
-                        <i class="material-icons tools" id="iOut">logout</i>
+                        <a href="../gestion.html"><i class="material-icons tools" id="iOut">logout</i></a>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 </div>
                 <!--Seccion de explicacion del capitulo-->
                 <div class="col-2">
-                    <h2 class="title_explain"><i class="material-icons">history_edu</i> Capitulo: Aprendiendo y Jugando
+                    <h2 class="title_explain"><i class="material-icons">history_edu</i>Aprendiendo y Jugando
                         con los Fundamentos</h2>
                     <hr class="division_explain">
                     <p class="lesson_description">
@@ -142,27 +142,27 @@
                     <hr class="division_explain">
                     <ul class="image-list">
                         <li>
-                            <img src="../Assets/media/Services/creatividad.png" alt="Imagen 1">
+                            <img src="../Assets/media/skills/concentracion_blue.png" alt="Imagen 1">
                             <div class="image-text">
                                 <p>Observacion</p>
                             </div>
                         </li>
                         <li>
-                            <img src="../Assets/media/Services/resolucion.png" alt="Imagen 2">
+                            <img src="../Assets/media/skills/destreza_blue.png" alt="Imagen 2">
                             <div class="image-text">
                                 <p>Asociacion y Razonamiento</p>
                             </div>
                         </li>
                         <li>
-                            <img src="../Assets/media/Services/competencia.png" alt="Imagen 3">
+                            <img src="../Assets/media/skills/motricidad_blue.png" alt="Imagen 3">
                             <div class="image-text">
-                                <p>Vocabulario y Comprension</p>
+                                <p>Motricidad Fina</p>
                             </div>
                         </li>
                         <li>
-                            <img src="../Assets/media/Services/aprendizaje.png" alt="Imagen 4">
+                            <img src="../Assets/media/skills/velocidad_blue.png" alt="Imagen 4">
                             <div class="image-text">
-                                <p>Motricidad Fina</p>
+                                <p>Vocabulario y Comprension</p>
                             </div>
                         </li>
                     </ul>
