--- a/Vistas/info_eje1.html
+++ b/Vistas/info_eje1.html
@@ -6,6 +6,10 @@
     <title>Mi página web</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
         /*variables*/
         :root {
             --primary-color: #689F38;
@@ -71,16 +75,14 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            align-items: center;
-            justify-content: center;
         }
 
         .image {
             width: 40%;
             margin-bottom: 2%;
+            margin-left: auto;
             display: flex;
             align-items: center;
-            justify-content: center;
         }
 
         .image img {
@@ -91,6 +93,7 @@
 
         .image-caption {
             text-align: center;
+            margin-left: 5%;
             font-weight: 600;
             color: var(--secondary-color);
             font-size: 20px;
@@ -105,10 +108,10 @@
         <h1>Capitulo 1 <span class="sub_title"> 1.1 Unir Palabras</span></h1>
         <div class="divider"></div>
         <div class="text">
-            <p>El ejercicio consiste en unir las palabras adecuadas con las imágenes correspondientes, 
-                simplemente arrastrando las palabras hacia las imágenes utilizando el ratón. A medida que 
-                te enfrentes a cada desafío, te encontrarás con una serie de palabras dispersas que representan 
-                diferentes objetos, animales, lugares o conceptos. Tu misión será identificar y seleccionar 
+            <p>El ejercicio consiste en unir las palabras adecuadas con las imágenes correspondientes,
+                simplemente arrastrando las palabras hacia las imágenes utilizando el ratón. A medida que
+                te enfrentes a cada desafío, te encontrarás con una serie de palabras dispersas que representan
+                diferentes objetos, animales, lugares o conceptos. Tu misión será identificar y seleccionar
                 la palabra correcta para cada imagen, creando así una conexión visual y cognitiva precisa.</p>
         </div>
 
