--- a/Vistas/info_eje2.html
+++ b/Vistas/info_eje2.html
@@ -6,6 +6,10 @@
     <title>Mi página web</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
         /*variables*/
         :root {
             --primary-color: #689F38;
@@ -71,16 +75,14 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            align-items: center;
-            justify-content: center;
         }
 
         .image {
             width: 40%;
             margin-bottom: 2%;
+            margin-left: auto;
             display: flex;
             align-items: center;
-            justify-content: center;
         }
 
         .image img {
@@ -91,6 +93,7 @@
 
         .image-caption {
             text-align: center;
+            margin-left: 5%;
             font-weight: 600;
             color: var(--secondary-color);
             font-size: 20px;
@@ -105,14 +108,14 @@
         <h1>Capitulo 1 <span class="sub_title"> 1.2 Sumar usando circulos</span></h1>
         <div class="divider"></div>
         <div class="text">
-            <p>El ejercicio consiste en una pantalla llena de círculos numerados. Tu objetivo 
-                será sumar incrementos a un número inicial haciendo clic en los círculos correspondientes. 
-                Cada vez que hagas clic en un círculo, se sumará el número que representa a tu contador. 
+            <p>El ejercicio consiste en una pantalla llena de círculos numerados. Tu objetivo
+                será sumar incrementos a un número inicial haciendo clic en los círculos correspondientes.
+                Cada vez que hagas clic en un círculo, se sumará el número que representa a tu contador.
                 Tu misión es alcanzar un marcador específico, que se te indicará al comenzar el ejercicio.<br><br>
-                A medida que vayas realizando las sumas y te acerques al marcador objetivo, encontrarás círculos 
+                A medida que vayas realizando las sumas y te acerques al marcador objetivo, encontrarás círculos
                 con números dispuestos en diferentes patrones y secuencias. Algunos círculos pueden tener valores
-                 más altos, mientras que otros tendrán valores más bajos. Tu tarea será seleccionar los círculos 
-                 adecuados y hacer clic en ellos en el orden correcto para llegar al marcador objetivo.
+                más altos, mientras que otros tendrán valores más bajos. Tu tarea será seleccionar los círculos
+                adecuados y hacer clic en ellos en el orden correcto para llegar al marcador objetivo.
             </p>
         </div>
 
@@ -141,10 +144,10 @@
         <div class="divider"></div>
         <div class="image-row">
             <div class="image">
-                <img src="../Assets/media/Clases/clase_ejercicio1.png" alt="Imagen 3">
+                <img src="../Assets/media/Clases/clase_ejercicio3.png" alt="Imagen 3">
             </div>
             <div class="image">
-                <img src="../Assets/media/Clases/clase_ejercicio2.png" alt="Imagen 4">
+                <img src="../Assets/media/Clases/clase_ejercicio4.png" alt="Imagen 3">
             </div>
         </div>
     </div>
