Actualizacion de la Ventana Final

--- a/Vistas/ventana_Final.html
+++ b/Vistas/ventana_Final.html
@@ -13,7 +13,8 @@
 
     <style>
         body {
-            background-color: #e3f2fd;
+            /*background-color: #e3f2fd;*/
+            background-image: url("../Assets/media/Backgrounds/4.png");
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,18 +22,20 @@
         }
 
         #card-mensaje {
-            background-color: #E4E8EB;
+            background-color: #bf360c;
             width: 50%;
             margin: auto;
         }
 
         #card-mensaje p {
-            color: #000;
+            color: #fbe9e7;
+            font-size: 22px;
             text-align: center;
         }
 
         #card-mensaje span {
-            color: #000;
+            color: #fbe9e7;
+            font-weight: bold;
             text-align: center;
         }
     </style>
@@ -48,7 +51,7 @@
                 son admirables. Continúa así, siempre buscando aprender y crecer.</p>
         </div>
         <div class="card-action center">
-            <button onclick="redireccionar()" class="waves-effect waves-light btn">Ir a la página principal</button>
+            <button onclick="redireccionar()" class="waves-effect waves-light btn orange accent-1 black-text"><b>Ir a la página principal</b></button>
         </div>
     </div>
 
