Cambio de color btn Ventana Final

--- a/Vistas/ventana_Final.html
+++ b/Vistas/ventana_Final.html
@@ -51,7 +51,7 @@
                 son admirables. Continúa así, siempre buscando aprender y crecer.</p>
         </div>
         <div class="card-action center">
-            <button onclick="redireccionar()" class="waves-effect waves-light btn orange accent-1 black-text"><b>Ir a la página principal</b></button>
+            <button onclick="redireccionar()" class="waves-effect waves-light btn orange accent-1 brown-text"><b>Ir a la página principal</b></button>
         </div>
     </div>
 
