--- a/Vistas/ventana_Final.html
+++ b/Vistas/ventana_Final.html
@@ -13,28 +13,30 @@
 
     <style>
         body {
-            /*background-color: #e3f2fd;*/
-            background-image: url("../Assets/media/Backgrounds/4.png");
+            background-color: #C5CAE9;
+            background-image: url("../Assets/media/cover/kiwi_background.png");
             display: flex;
             justify-content: center;
             align-items: center;
+            width: 100%;
+            height: 100%;
             height: 100vh;
         }
 
         #card-mensaje {
-            background-color: #bf360c;
+            background-color: #E4E8EB;
             width: 50%;
             margin: auto;
         }
 
         #card-mensaje p {
-            color: #fbe9e7;
+            color: #0E4D8D;
             font-size: 22px;
             text-align: center;
         }
 
         #card-mensaje span {
-            color: #fbe9e7;
+            color: #0E4D8D;
             font-weight: bold;
             text-align: center;
         }
@@ -51,7 +53,7 @@
                 son admirables. Continúa así, siempre buscando aprender y crecer.</p>
         </div>
         <div class="card-action center">
-            <button onclick="redireccionar()" class="waves-effect waves-light btn orange accent-1 brown-text"><b>Ir a la página principal</b></button>
+            <button onclick="redireccionar()" class="waves-effect waves-light btn orange accent-1 white-text"><b>Ir a la página principal</b></button>
         </div>
     </div>
 
