Cambios durante la feria

--- a/Vistas/info_eje1.html
+++ b/Vistas/info_eje1.html
@@ -91,6 +91,11 @@
             display: block;
         }
 
+        .capturas{
+            border: 3px solid var(--quaternary-color);
+            border-radius: 10px;
+        }
+
         .image-caption {
             text-align: center;
             margin-left: 5%;
@@ -140,10 +145,10 @@
         <div class="divider"></div>
         <div class="image-row">
             <div class="image">
-                <img src="../Assets/media/Clases/clase_ejercicio1.png" alt="Imagen 3">
+                <img src="../Assets/media/Clases/clase_ejercicio1.png" alt="Imagen 3" class="capturas">
             </div>
             <div class="image">
-                <img src="../Assets/media/Clases/clase_ejercicio2.png" alt="Imagen 4">
+                <img src="../Assets/media/Clases/clase_ejercicio2.png" alt="Imagen 4" class="capturas">
             </div>
         </div>
     </div>
