--- a/Vistas/info_eje2.html
+++ b/Vistas/info_eje2.html
@@ -91,6 +91,11 @@
             display: block;
         }
 
+        .capturas{
+            border: 3px solid var(--quaternary-color);
+            border-radius: 10px;
+        }
+
         .image-caption {
             text-align: center;
             margin-left: 5%;
@@ -144,10 +149,10 @@
         <div class="divider"></div>
         <div class="image-row">
             <div class="image">
-                <img src="../Assets/media/Clases/clase_ejercicio3.png" alt="Imagen 3">
+                <img src="../Assets/media/Clases/clase_ejercicio3.png" alt="Imagen 3" class="capturas">
             </div>
             <div class="image">
-                <img src="../Assets/media/Clases/clase_ejercicio4.png" alt="Imagen 3">
+                <img src="../Assets/media/Clases/clase_ejercicio4.png" alt="Imagen 3" class="capturas">
             </div>
         </div>
     </div>
